--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/deliver.jpg
+    - assets/hijab.jpeg
+    - assets/sweater.webp
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
